# JobParseX

./: README.md  pyproject.toml
src/: exception_job_parse_x.py  head_hunter_platform_API.py  job_platform_API.py  main.py  super_job_platform_API.py  vacancy.py
src/api/: head_hunter_platform_API.py  super_job_platform_API.py
src/data/: job_file.py
src/file_data/: job_file.py  json_job_file.py
src/file_data/data/: vacancy.json
src/vacancy/: vacancy.py
