[tool.poetry]
name = "jobparsex"
version = "0.1.0"
description = ""
authors = ["Denis_L <denis88lyapin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
